# MyEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  compile_commands.json
.github/: copilot-instructions.md
demo/: CMakeLists.txt  EnemyLogic.cpp  EnemyLogic.hpp  PlayerMovement.cpp  PlayerMovement.hpp  main.cpp
demo/include/: EnemyLogic.hpp  EnemySpawner.hpp  PlayerMovement.hpp
demo/src/: EnemyLogic.cpp  EnemySpawner.cpp  PlayerMovement.cpp  main.cpp
docs/: engine.md
engine/: CMakeLists.txt
engine/include/engine/: Component.hpp  Engine.hpp  GameObject.hpp  Level.hpp  LevelManager.hpp  RenderPipeline.hpp  Scene.hpp  SceneManager.hpp  TextureManager.hpp  Time.hpp  Vector3.hpp
engine/include/engine/components/: Camera.hpp  PerspectiveCamera.hpp  Sprite.hpp  Transform.hpp
engine/src/: Component.cpp  GameObject.cpp  Level.cpp  LevelManager.cpp  RenderPipeline.cpp  Scene.cpp  SceneManager.cpp  TextureManager.cpp  Time.cpp  Vector3.cpp
engine/src/components/: Camera.cpp  PerspectiveCamera.cpp  Sprite.cpp  Transform.cpp
testing/: CMakeLists.txt  game_object.cpp  instantiate.cpp  texture_manager.cpp
